--- a/lib/styles/print.scss
+++ b/lib/styles/print.scss
@@ -29,6 +29,6 @@
 	@media print {
 		dialog, .reveal-modal { 
 			display: none;
-			background: $white !important;
+			background: #FFF !important;
 		}
 	}
